# chuff

./: .gitignore  Cargo.toml  LICENSE  README.md  lex.huff  makefile  test.huff  test2.huff
.github/workflow/: lints.yaml  test.yaml
.github/workflows/: build.yaml
src/: builtins.rs  lib.rs  main.rs  span.rs
src/lexer/: mod.rs  token.rs  utils.rs
src/parser/: abi.rs  constants.rs  macros.rs  mod.rs  token.rs  utils.rs
src/utils/: abi.rs  ast.rs  builtins.rs  bytes_util.rs  mod.rs  opcodes.rs  types.rs
