[package]
name = "chumsky-huff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8"
phf = { version = "0.11", features = ["macros"] }
itertools = "0.10.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "chuffc"
path = "src/main.rs"
doc = false