[package]
name = "chumsky-huff"
version = "0.1.0"
edition = "2021"
features = ["trait alias"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8"
phf = { version = "0.11", features = ["macros"] }
itertools = "0.10.5"
serde = { version = "1.0.137", features = [ "derive", "rc" ]}
serde_json = "1.0.81"
ariadne = "0.1.5"
ethers-core = "0.13.0"
regex = "1"
lazy_static = "1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }


[lib]
path = "src/lib.rs"

[[bin]]
name = "chuffc"
path = "src/main.rs"
doc = false